--- a/Lab6/experiment.tex
+++ b/Lab6/experiment.tex
@@ -2,12 +2,18 @@
 
 \subsection{Measurement of voltage source parameters}
 
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=6cm]{schematics/1.pdf}
+	\caption{}
+\end{figure}
+
 $V_o=\SI{5.31615}{\volt}$
 
 \begin{table}[H]
 	\centering
 	\begin{tabular}{ c | c | c | c | c}
-		$R_L [\unit{\ohm}]$ & $V [\unit{\volt}]$ & $\frac{V}{V_o}$ & $Vp-p[\unit{\milli\volt}]$ & $I [\unit{\milli\ampere}]$ \\
+		$R_L [\unit{\ohm}]$ & $V [\unit{\volt}]$ & $\frac{V}{V_o}$ & $V_{p-p}[\unit{\milli\volt}]$ & $I [\unit{\milli\ampere}]$ \\
 		\hline
 		$10000$ & $5.31131$ & $0.99909$ & $19.6$ & $0.53113$ \\
 		$9000$ & $5.31236$ & $0.99929$ & $18$ & $0.59026$ \\
@@ -28,8 +34,150 @@ $V_o=\SI{5.31615}{\volt}$
 		$300$ & $4.92745$ & $0.92688$ & $100$ & $16.42483$ \\ 
 	\end{tabular}
 	\caption{}
-	\label{tab:}
 \end{table}
+
+\begin{figure}[H]
+	\centering
+	\begin{minipage}{.47\textwidth}
+		\centering
+		\includegraphics[width=1\linewidth]{schematics/chart1.pdf}
+	\end{minipage}\qquad
+	\begin{minipage}{.47\textwidth}
+		\centering
+		\includegraphics[width=1\linewidth]{schematics/chart2.pdf}
+	\end{minipage}
+	
+	\bigskip
+	
+	\begin{minipage}[t]{.4\textwidth}
+		\centering
+		
+		\caption{}
+	\end{minipage}\qquad
+	\begin{minipage}[t]{.4\textwidth}
+		\centering
+		\caption{}
+	\end{minipage}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=6cm]{schematics/2.pdf}
+	\caption{}
+\end{figure}
+
+\begin{table}[H]
+	\begin{subtable}[c]{0.5\textwidth}
+		\centering
+			\begin{tabular}{ c | c | c | c}
+			$R_L [\unit{\ohm}]$ & $V [\unit{\volt}]$ & $\frac{V}{V_o}$ & $I [\unit{\milli\ampere}]$ \\
+			\hline
+			$10000$ & $5.318$ & $0.99906$ & $0.53137$ \\
+			$9000$ & $5.319$ & $0.99925$ & $0.59025$ \\
+			$8000$ & $5.319$ & $0.99925$ & $0.66377$ \\
+			$7000$ & $5.317$ & $0.99887$ & $0.75821$ \\
+			$6000$ & $5.317$ & $0.99887$ & $0.88412$ \\
+			$5000$ & $5.315$ & $0.99850$ & $1.06036$ \\
+			$4000$ & $5.312$ & $0.99793$ & $1.3242$ \\
+			$3000$ & $5.306$ & $0.99681$ & $1.76291$ \\
+			$2000$ & $5.298$ & $0.99530$ & $2.58513$ \\
+			$1000$ & $5.271$ & $0.99023$ & $4.95231$ \\
+			$900$ & $5.265$ & $0.98910$ & $5.53997$ \\
+			$800$ & $5.255$ & $0.98723$ & $6.34545$ \\
+			$700$ & $5.243$ & $0.98497$ & $7.21971$ \\
+			$600$ & $5.228$ & $0.98215$ & $8.36787$ \\
+			$500$ & $5.200$ & $0.97689$ & $9.96317$ \\
+			$400$ & $5.144$ & $0.96637$ & $12.1929$ \\
+			$300$ & $4.887$ & $0.91809$ & $15.2643$ \\
+		\end{tabular}
+		\subcaption{1st voltage source: $V_o=\SI{5.323}{\volt}$}
+	\end{subtable}
+	\begin{subtable}[c]{0.5\textwidth}
+		\centering
+			\begin{tabular}{ c | c | c | c}
+			$R_L [\unit{\ohm}]$ & $V [\unit{\volt}]$ & $\frac{V}{V_o}$ & $I [\unit{\milli\ampere}]$ \\
+			\hline
+			$10000$ & $13.86$ & $0.99856$ & $1.38284$ \\
+			$9000$ & $13.86$ & $0.99856$ & $1.51444$ \\
+			$8000$ & $13.86$ & $0.99856$ & $1.70754$ \\
+			$7000$ & $13.86$ & $0.99856$ & $1.95128$ \\
+			$6000$ & $13.85$ & $0.99784$ & $2.28445$ \\
+			$5000$ & $13.85$ & $0.99784$ & $2.76018$ \\
+			$4000$ & $13.85$ & $0.99784$ & $3.44949$ \\
+			$3000$ & $13.85$ & $0.99784$ & $4.59595$ \\
+			$2000$ & $13.85$ & $0.99784$ & $6.87844$ \\
+			$1000$ & $13.84$ & $0.99712$ & $13.6041$ \\
+			$900$ & $13.83$ & $0.99640$ & $15.0913$ \\
+			$800$ & $13.83$ & $0.99640$ & $16.8573$ \\
+			$700$ & $13.82$ & $0.99568$ & $18.3644$ \\
+			$600$ & $13.81$ & $0.99496$ & $22.5856$ \\
+			$500$ & $13.8$ & $0.99424$ & $27.0082$ \\
+			$400$ & $13.79$ & $0.99352$ & $33.6526$ \\
+			$300$ & $13.78$ & $0.99280$ & $44.6311$ \\
+			$200$ & $13.68$ & $0.98559$ & $65.1863$ \\
+			$100$ & $13.66$ & $0.98415$ & $132.8120$ \\
+			$50$ & $13.37$ & $0.96326$ & $251.9140$ \\
+		\end{tabular}
+		\subcaption{2nd voltage source: $V_o=\SI{13.88}{\volt}$}
+	\end{subtable}
+	\caption{}
+\end{table}
+
+\begin{figure}[H]
+	\centering
+	\begin{subfigure}{.5\textwidth}
+		\centering
+		\includegraphics[width=.99\linewidth]{schematics/chart3.pdf}
+		\caption{1st voltage source}
+	\end{subfigure}%
+	\begin{subfigure}{.5\textwidth}
+		\centering
+		\includegraphics[width=.99\linewidth]{schematics/chart4.pdf}
+		\caption{2nd voltage source}
+	\end{subfigure}
+	\caption{}
+\end{figure}
 
 
 \subsection{Measurement of current source parameters}
+
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=6cm]{schematics/3.pdf}
+	\caption{}
+\end{figure}
+
+$R_s = \SI{10}{\ohm}$
+
+\begin{table}[H]
+	\centering
+	\begin{tabular}{ c | c | c | c | c}
+		$R_L [\unit{\ohm}]$ & $V_v[\unit{\milli\volt}]$ & $\frac{V_v}{V_o}$ & $I [\unit{\milli\ampere}]$ & $V [\unit{\volt}]$ \\
+		\hline
+		$0$ & $19.3363$ & $1.00000$ & $1.93363$ & $0.0193363$ \\
+		$10$ & $19.4437$ & $1.00555$ & $1.94437$ & $0.0388874$ \\
+		$20$ & $19.4527$ & $1.00602$ & $1.94527$ & $0.0583581$ \\
+		$30$ & $19.4569$ & $1.00624$ & $1.94569$ & $0.0778276$ \\
+		$40$ & $19.4585$ & $1.00632$ & $1.94585$ & $0.0972925$ \\
+		$50$ & $19.4607$ & $1.00643$ & $1.94607$ & $0.1167642$ \\
+		$60$ & $19.4627$ & $1.00654$ & $1.94627$ & $0.1362389$ \\
+		$70$ & $19.4633$ & $1.00657$ & $1.94633$ & $0.1557064$ \\
+		$80$ & $19.4639$ & $1.00660$ & $1.94639$ & $0.1751751$ \\
+		$90$ & $19.464$ & $1.00660$ & $1.9464$ & $0.19464$ \\
+		$100$ & $19.4647$ & $1.00664$ & $1.94647$ & $0.2141117$ \\
+		$200$ & $19.4199$ & $1.00432$ & $1.94199$ & $0.4078179$ \\
+		$500$ & $19.4347$ & $1.00509$ & $1.94347$ & $0.9911697$ \\
+		$1000$ & $19.4332$ & $1.00501$ & $1.94332$ & $1.9627532$ \\
+		$2000$ & $19.4207$ & $1.00436$ & $1.94207$ & $3.9035607$ \\
+		$5000$ & $19.3332$ & $0.99984$ & $1.93332$ & $9.6859332$ \\
+		$6000$ & $16.8815$ & $0.87305$ & $1.68815$ & $10.1457815$ \\
+	\end{tabular}
+	\caption {}
+\end{table}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=10cm]{schematics/chart5.pdf}
+	\caption{}
+\end{figure}
