--- a/Lab6/main.tex
+++ b/Lab6/main.tex
@@ -8,6 +8,7 @@
 \usepackage{float}
 \usepackage{graphicx}
 \usepackage{multirow}
+\usepackage{subcaption}
 
 \title{MEASUREMET OF VOLTAGE AND CURRENT SOURCE PARAMETERS}
 \date{2023-01-16}
