--- a/Lab6/theory.tex
+++ b/Lab6/theory.tex
@@ -3,3 +3,13 @@
 \subsection{Theory}
 
 \subsection{Equipment}
+
+The following devices were used during the laboratory:
+
+\begin{itemize}
+	\item power supply: DF1730SB3A;
+	\item decade resistor: DR5b-16;
+	\item digital meter:  Agilent 34401A and UT803;
+	\item oscilloscope;
+	\item standard resistor.
+\end{itemize}
