--- a/Lab6/conclusion.tex
+++ b/Lab6/conclusion.tex
@@ -1,1 +1,3 @@
 \section{Conclusion}
+
+All experiments confirmed the limitations of a power supply. It is not fully clear to us why the 1st experiment produced locally increasing voltage and, as a result, negative internal resistance values (Tab.~\ref{tab:voltage_2point}); the most plausible explanations seem to be either human error or a device malfunction. Despite this unexpected behavior, it is still clearly visible in all graphs that power supplies are unable to perform as desired once their limits are reached.
