--- a/Lab6/theory.tex
+++ b/Lab6/theory.tex
@@ -2,6 +2,9 @@
 
 \subsection{Theory}
 
+During this laboratory we explored the voltage and current source parameters, and their impact on a circuit. As we know, to get the most precise measurement, we should take into account every element in the circuit and power supplies are no exception. An ideal current source will maintain the chosen current despite the output voltage and the load resistance values.
+Similarly, an ideal voltage will always deliver the chosen voltage despite the current and the load resistance values. In reality, no device will ever behave like an ideal one, and both the voltage and the current source will lose the desired functionality after certain conditions are met.
+
 \subsection{Equipment}
 
 The following devices were used during the laboratory:
@@ -11,5 +14,6 @@ The following devices were used during the laboratory:
 	\item decade resistor: DR5b-16;
 	\item digital meter:  Agilent 34401A and UT803;
 	\item oscilloscope;
+	\item voltage sources;
 	\item standard resistor.
 \end{itemize}
