--- a/Lab6/main.tex
+++ b/Lab6/main.tex
@@ -9,6 +9,8 @@
 \usepackage{graphicx}
 \usepackage{multirow}
 \usepackage{subcaption}
+\usepackage[dvipsnames]{xcolor}
+
 
 \title{MEASUREMET OF VOLTAGE AND CURRENT SOURCE PARAMETERS}
 \date{2023-01-16}
